--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.0"
+    "node-sass": "^4.5.0",
+    "react-scripts": "0.9.0",
+    "sass-loader": "^6.0.2"
   },
   "dependencies": {
     "react": "^15.4.2",
