--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
+    "material-ui": "^1.0.0-beta.33",
     "react": "^15.4.2",
-    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "react-router-bootstrap": "^0.23.1"
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "node scripts/start.js",
