--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "material-ui": "^1.0.0-beta.33",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
+    "react-router-dom": "^4.2.2",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
