--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.2.2",
+    "styled-components": "^3.1.6",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
